Intro to Apex/Let'sdothis/force-app/main/default/objects/Pet__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Species__c</field>
            <operation>equals</operation>
            <valueField>Contact.Pet_Choice__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pets</relationshipLabel>
    <relationshipName>Pets</relationshipName>
    <type>Lookup</type>
</CustomField>