Intro to Apex/Let'sdothis/force-app/main/default/objects/Pet__c/fields/SIze__c.field-meta.xml
<CustomField>
    <fullName>SIze__c</fullName>
    <label>SIze</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Extra Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>