Intro to Apex/Let'sdothis/force-app/main/default/objects/Pet__c/recordTypes/Mammal.recordType-meta.xml
<RecordType>
    <fullName>Mammal</fullName>
    <active>true</active>
    <label>Mammal</label>
</RecordType>