Intro to Apex/Let'sdothis/force-app/main/default/objects/Pet__c/recordTypes/Non_Mammal.recordType-meta.xml
<RecordType>
    <fullName>Non_Mammal</fullName>
    <active>true</active>
    <label>Non-Mammal</label>
</RecordType>